fix: css 수정 ( 미디어쿼리 max-width->max-width, gap 사용)

--- a/style/style.css
+++ b/style/style.css
@@ -29,16 +29,16 @@ body {
 
 /* 사이드바 css */
 .hide {
-  transform: translateX(-400px);
+  transform: translateX(-100%);
 }
 
 .sideContainer {
   position: relative;
   z-index: 1;
-  width: 400px;
+  width: 100%;
   height: 100vh;
   background-color: #ffffff;
-  transition: 0.4s;
+  transition: all 0.4s linear;
   overflow: hidden;
 }
 
@@ -51,7 +51,7 @@ body {
   color: #ac0000;
   font-size: 25px;
   cursor: pointer;
-  transition: 0.5s;
+  transition: 0.2s;
 }
 
 .sideHeader i:hover {
@@ -86,10 +86,7 @@ body {
 .brand-links ul {
   display: flex;
   justify-content: center;
-}
-
-.brand-links li {
-  margin: 0 10px;
+  gap: 10px;
   color: dodgerblue;
   font-size: 20px;
   transition: 0.5s;
@@ -99,8 +96,8 @@ body {
   color: #000000;
 }
 
-@media screen and (max-width: 675px) {
+@media screen and (min-width: 675px) {
   .sideContainer {
-    width: 100vw;
+    width: 400px;
   }
 }
